# ISIT

./: main.py  pyproject.toml  scraper.py
.github/workflows/: linting.yml
