[tool.poetry]
name = "ml-fillipov"
version = "0.1.0"
description = ""
authors = ["sofiafrumina <sofiafrumina@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
