[tool.poetry]
name = "isit"
version = "0.1.0"
description = ""
authors = ["sofiafrumina <sofiafrumina@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.28.0"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
beautifulsoup4 = "^4.12.3"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
